with all routes in api service
